<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TV_ViewFlipper_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/TV_ViewFlipper_IDXML"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <AdapterViewFlipper
        android:id="@+id/AVF_ViewFlipper_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TV_ViewFlipper_IDXML"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp">

    </AdapterViewFlipper>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/LL_LayoutBawah"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_SetInterval_IDXML"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_SetInterval_IDXML"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ET_SetInterval_IDXML"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/ET_SetInterval_IDXML"
            android:inputType="number"
            android:textSize="15sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_LayoutBawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/B_Mulai_IDXML"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/B_Mulai_IDXML"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <Button
            android:id="@+id/B_Berhenti_IDXML"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/B_Berhenti_IDXML"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>